--- a/src/app/auth/login/login.html
+++ b/src/app/auth/login/login.html
@@ -40,10 +40,10 @@
         }
       </div>
 
-      <div class="options-row">
+      <!-- <div class="options-row">
         <label> <input type="checkbox" /> Recordarme </label>
         <a href="olvidar">¿Olvidaste tu contraseña?</a>
-      </div>
+      </div> -->
 
       <button type="submit" style="background-color: #f57c00;">Iniciar Sesión</button>
     </form>
