--- a/src/app/candidatos/candidatos-create/candidatos-create.component.html
+++ b/src/app/candidatos/candidatos-create/candidatos-create.component.html
@@ -83,7 +83,8 @@
                     </div>
 
                     <div>
-                        <label for="Nombre" class="block mb-2 text-sm font-medium text-[#344054]">Nombre del candidato</label>
+                        <label for="Nombre" class="block mb-2 text-sm font-medium text-[#344054]">Nombre del
+                            candidato</label>
                         <input type="text" id="Nombre" placeholder="Nombre completo" name="Nombre"
                             formControlName="Nombre"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
@@ -91,6 +92,11 @@
                         @if (errorHandling('Nombre', 'required')) {
                         <mat-error>
                             El nombre es <strong>requerido</strong>.
+                        </mat-error>
+                        }
+                        @if (errorHandling('Nombre', 'pattern')) {
+                        <mat-error>
+                            El nombre <strong> NO</strong> puede tener caracteres especiales.
                         </mat-error>
                         }
                     </div>
