--- a/src/app/elecciones/elecciones-index/elecciones-index.component.html
+++ b/src/app/elecciones/elecciones-index/elecciones-index.component.html
@@ -34,7 +34,7 @@
             <div class="table-card">
 
                 <!-- Contenedor de Filtros -->
-                <div class="filters-container flex w-full h-fit p-4 px-8 bg-white z-10 relative">
+                <div class="filters-container flex w-full h-fit p-2 px-8 bg-white z-10 relative">
 
 
 
@@ -77,7 +77,7 @@
                 </div>
 
                 <!-- Contenedor de la Tabla -->
-                <div class="relative overflow-x-auto p-3">
+                <div class="relative overflow-x-auto">
                     <table mat-table [dataSource]="dataSource" matSort class="w-full text-sm text-left rtl:text-right ">
 
                         <!-- Columna: Nombre -->
