--- a/src/app/votantes/votantes-index/votantes-index.component.html
+++ b/src/app/votantes/votantes-index/votantes-index.component.html
@@ -28,6 +28,19 @@
             </select>
           </div>
 
+          <div class="max-w-md mx-auto pt-4 pr-5">
+            <select id="estado-filter" name="selectedEstado" [(ngModel)]="selectedEstado" (change)="onFilterChange()"
+              class="text-[#667085] font-medium rounded-lg text-sm px-5 py-2.5 inline-flex items-center border bg-white">
+
+              <!-- Opciones de roles. Asumo que `roles` tiene `name` y `label` -->
+              @for (estado of estados; track estado.name) {
+              <option [value]="estado.name">
+                {{ estado.label }}
+              </option>
+              }
+            </select>
+          </div>
+          
           <!-- Filtro por Cédula / Identificación -->
           <div class="max-w-md mx-auto">
             <mat-form-field class="relative">
